src/objects/ints__Credit_Report__c.object
<CustomObject>
    <fields>
        <fullName>ints__Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Credit Report</relationshipLabel>
        <relationshipName>Credit_Report</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ints__Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Credit Reports</relationshipLabel>
        <relationshipName>Credit_Reports</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ints__CreditBureauName__c</fullName>
        <label>Credit Bureau Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ints__CreditRatingCodeType__c</fullName>
        <label>Credit Rating Code Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ints__CreditReportFirstIssuedDate__c</fullName>
        <label>Credit Report First Issued Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ints__CreditReportIdentifier__c</fullName>
        <label>Credit Report Identifier</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ints__CreditReportLastUpdatedDate__c</fullName>
        <label>Credit Report Last Updated Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ints__CreditReportMergeType__c</fullName>
        <label>Credit Report Merge Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ints__CreditReportType__c</fullName>
        <label>Credit Report Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ints__Credit_Report_Attachment__c</fullName>
        <label>Credit Report Attachment</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>ints__Credit_Repository__c</fullName>
        <label>Credit Repository</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ints__ResponseDateTime__c</fullName>
        <label>Response Date Time</label>
        <type>DateTime</type>
    </fields>
    <label>Credit Report</label>
    <nameField>
        <displayFormat>CR-{0000000000}</displayFormat>
        <label>CreditReport Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Credit Reports</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>